<resources>
    <string name="app_name">AppScout</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to Ramos -->
    <string name="ramo_lobinho">Lobinho</string>
    <string name="ramo_escoteiro">Escoteiro</string>
    <string name="ramo_senior">Sênior</string>
    <string name="ramo_pioneiro">Pioneiro</string>
    <string name="any_ramo">Qualquer</string>
    <string name="title_ramo">Selecione o ramo desejado</string>
    <string name="title_activity_games_screen">gamesScreen</string>
    <string name="ramo_selecionado">ramo</string>

    <!-- Strings related to Filter -->
    <string name="duracaoLabel">Duração (minutos):</string>
    <string name="filterTitle">Seleciones os filtros desejados para o ramo</string>
    <string name="quantLabel">Quantidade de participantes:</string>
    <string name="compLabel">Competencia:</string>
    <string name="locationLabel">Local:</string>
    <string name="areaLabel">Area de desenvolvimento:</string>
    <string name="filterButtonLabel">Filtrar</string>

    <string-array name="FisecaArray">
        <item>Físico</item>
        <item>Intelectual</item>
        <item>Social</item>
        <item>Espiritual</item>
        <item>Carater</item>
        <item>Afetivo</item>
    </string-array>

    <string-array name="LocationArray">
        <item>Quadra</item>
        <item>Campo aberto</item>
        <item>Sala</item>
    </string-array>

    <string-array name="CompArray">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
