<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RamosFragment">

    <Button
            android:id="@+id/lobinhoButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FFAB3B"
            android:text="@string/ramo_lobinho"
            app:layout_constraintBottom_toTopOf="@+id/escoteiroButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/escoteiroButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background=" #388e3c "
            android:text="@string/ramo_escoteiro"
            app:layout_constraintBottom_toTopOf="@+id/seniorButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lobinhoButton" />

    <Button
            android:id="@+id/seniorButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#831D1C"
            android:text="@string/ramo_senior"
            app:layout_constraintBottom_toTopOf="@+id/pioneiroButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/escoteiroButton" />

    <Button
            android:id="@+id/pioneiroButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FF0000"
            android:text="@string/ramo_pioneiro"
            app:layout_constraintBottom_toTopOf="@+id/anyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seniorButton" />

    <Button
            android:id="@+id/anyButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:text="@string/any_ramo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pioneiroButton"
            app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>