<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FilterFragment">

    <TextView
            android:id="@+id/filterTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/filterTitle"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <TextView
            android:text="@string/duracaoLabel"
            android:layout_width="111dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:id="@+id/durationLabel"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/filterTitle" app:layout_constraintStart_toStartOf="@+id/filterTitle"
            android:layout_marginStart="8dp" android:textAlignment="center"/>
    <TextView
            android:text="@string/quantLabel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:id="@+id/quantLabel"
            android:textAllCaps="false" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/durationLabel"
            app:layout_constraintStart_toStartOf="@+id/durationLabel"
            app:layout_constraintEnd_toEndOf="@+id/durationLabel" android:textAlignment="center"/>
    <TextView
            android:text="@string/compLabel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:id="@+id/compLabel" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/quantLabel" app:layout_constraintStart_toStartOf="@+id/quantLabel"
            app:layout_constraintEnd_toEndOf="@+id/quantLabel"
            android:textAlignment="center" android:gravity="center"/>
    <TextView
            android:text="@string/locationLabel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:id="@+id/locationLabel" app:layout_constraintStart_toStartOf="@+id/compLabel"
            app:layout_constraintEnd_toEndOf="@+id/compLabel"
            android:textAlignment="center" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/compLabel" android:gravity="center"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/locationLabel"
            android:id="@+id/AreaLabel"
            android:text="@string/areaLabel"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/locationLabel"
            app:layout_constraintEnd_toEndOf="@+id/locationLabel" android:textAlignment="center"
            android:gravity="center"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/durationFieldMin"
            app:layout_constraintStart_toEndOf="@+id/durationLabel"
            app:layout_constraintTop_toTopOf="@+id/durationLabel"
            app:layout_constraintBottom_toBottomOf="@+id/durationLabel"
            android:textSize="14sp"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintEnd_toStartOf="@+id/betweenLabelDuration"
            android:hint="5" android:textAlignment="center"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/quantFieldMin"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/quantLabel"
            app:layout_constraintTop_toTopOf="@+id/quantLabel"
            app:layout_constraintBottom_toBottomOf="@+id/quantLabel"
            android:hint="8" android:textAlignment="center" app:layout_constraintEnd_toStartOf="@+id/betweenLabelQuant"
            />
    <Spinner
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/compDrop" app:layout_constraintStart_toEndOf="@+id/compLabel"
            app:layout_constraintEnd_toEndOf="@+id/quantFieldMax"
            app:layout_constraintTop_toTopOf="@+id/compLabel"
            app:layout_constraintBottom_toBottomOf="@+id/compLabel" app:layout_constraintHorizontal_bias="0.49"
            />
    <Spinner
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/locationDrop"
            app:layout_constraintTop_toTopOf="@+id/locationLabel"
            app:layout_constraintBottom_toBottomOf="@+id/locationLabel"
            app:layout_constraintStart_toEndOf="@+id/locationLabel"
            app:layout_constraintEnd_toEndOf="@+id/compDrop"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/AreaDrop" app:layout_constraintStart_toEndOf="@+id/AreaLabel"
            app:layout_constraintTop_toTopOf="@+id/AreaLabel"
            app:layout_constraintBottom_toBottomOf="@+id/AreaLabel"
            app:layout_constraintEnd_toEndOf="@+id/locationDrop"/>
    <Button
            android:text="@string/filterButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/filterButton" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/AreaLabel"/>
    <TextView
            android:text="a"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/betweenLabelDuration"
            app:layout_constraintTop_toTopOf="@+id/durationFieldMin"
            app:layout_constraintBottom_toBottomOf="@+id/durationFieldMin"
            app:layout_constraintVertical_bias="0.0" android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/durationLabel" android:layout_marginStart="50dp"
            app:layout_constraintEnd_toEndOf="@+id/filterTitle" android:layout_marginEnd="50dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:id="@+id/durationFieldMax"
            app:layout_constraintEnd_toEndOf="@+id/filterTitle"
            app:layout_constraintTop_toTopOf="@+id/durationLabel"
            app:layout_constraintBottom_toBottomOf="@+id/durationLabel"
            app:layout_constraintStart_toEndOf="@+id/betweenLabelDuration" android:textSize="14sp" android:hint="10"
            android:textAlignment="center" android:inputType="number"/>
    <TextView
            android:text="a"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/betweenLabelQuant"
            app:layout_constraintTop_toTopOf="@+id/quantLabel"
            app:layout_constraintBottom_toBottomOf="@+id/quantLabel"
            app:layout_constraintStart_toEndOf="@+id/durationFieldMin" app:layout_constraintEnd_toEndOf="@+id/betweenLabelDuration"
            android:gravity="center"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:id="@+id/quantFieldMax"
            app:layout_constraintStart_toEndOf="@+id/betweenLabelQuant"
            app:layout_constraintTop_toTopOf="@+id/quantLabel"
            app:layout_constraintBottom_toBottomOf="@+id/quantLabel"
            app:layout_constraintEnd_toEndOf="@+id/durationFieldMax"
            android:textSize="14sp" android:hint="30" android:textAlignment="center" android:inputType="number"/>
</androidx.constraintlayout.widget.ConstraintLayout>